RESOLVED FIXED165512
Exiting Element Fullscreen mode loses focus on WKWebView.
https://bugs.webkit.org/show_bug.cgi?id=165512
Summary Exiting Element Fullscreen mode loses focus on WKWebView.
Jer Noble
Reported 2016-12-06 21:15:12 PST
Exiting Element Fullscreen mode loses focus on WKWebView.
Attachments
Patch (2.26 KB, patch)
2016-12-06 21:17 PST, Jer Noble
no flags
Jer Noble
Comment 1 2016-12-06 21:17:02 PST
Jer Noble
Comment 2 2016-12-06 21:17:27 PST
WebKit Commit Bot
Comment 3 2016-12-07 12:30:22 PST
Comment on attachment 296372 [details] Patch Clearing flags on attachment: 296372 Committed r209468: <http://trac.webkit.org/changeset/209468>
WebKit Commit Bot
Comment 4 2016-12-07 12:30:26 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.