Exiting Element Fullscreen mode loses focus on WKWebView. https://bugs.webkit.org/show_bug.cgi?id=165512

Reviewed by Eric Carlson.

Setting 'window.contentView.hidden = YES' will reset the first-responder (whereas
previously setting 'window.contentView.layer.hidden = YES' did not). Grab the first-
responder before doing so, so that it can be reset correctly when moving the WKWebView
back to it's original window.

* UIProcess/mac/WKFullScreenWindowController.mm:
(-[WKFullScreenWindowController finishedExitFullScreenAnimation:]):


Canonical link: https://commits.webkit.org/183133@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@209468 268f45cc-cd09-0410-ab3c-d52691b4dbfc