Source/WebKit2/UIProcess/mac/WKFullScreenWindowController.mm
@@ -393,6 +393,8 @@ static const float minVideoWidth = 480 + 20 + 20; // Note: Keep in sync with med
         return;
     _fullScreenState = NotInFullScreen;
 
+    NSResponder *firstResponder = [[self window] firstResponder];
+
     // Screen updates to be re-enabled in completeFinishExitFullScreenAnimationAfterRepaint.
     NSDisableScreenUpdates();
     _page->setSuppressVisibilityUpdates(true);
@@ -402,7 +404,6 @@ static const float minVideoWidth = 480 + 20 + 20; // Note: Keep in sync with med
     [_backgroundView.get().layer removeAllAnimations];
     [[_webViewPlaceholder window] setAutodisplay:NO];
 
-    NSResponder *firstResponder = [[self window] firstResponder];
     [self _replaceView:_webViewPlaceholder.get() with:_webView];
     BEGIN_BLOCK_OBJC_EXCEPTIONS
     [NSLayoutConstraint activateConstraints:self.savedConstraints];
